feat(docker): added stoge for running app
