# docs/swagger.json
@@ -165,7 +165,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.AddRecordUser"
                         }
                     }
                 ],
@@ -223,6 +223,32 @@
                 }
             }
         },
+        "models.AddRecordUser": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "test@gmail.com"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Eugene"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password"
+                },
+                "preferences": {
+                    "type": "string",
+                    "example": "some text about my preferences"
+                }
+            }
+        },
         "models.Pet": {
             "type": "object",
             "properties": {
@@ -265,7 +291,6 @@
                     "example": "Eugene"
                 },
                 "preferences": {
-                    "description": "Предпочтения",
                     "type": "string",
                     "example": "some text about my preferences"
                 },
